hphp/test/zend/bad/ext/reflection/tests/ReflectionFunction_getExtension.php
<?php
function foo () {}

$function = new ReflectionFunction('sort');
var_dump($function->getExtension());

$function = new ReflectionFunction('foo');
var_dump($function->getExtension());
?>
